# DXSense

./: .gitignore  CMakeLists.txt  LICENSE  README.md  reader.py  reader_plain.py
analysis/: NEOX3_PROBES.md  NEOX3_RUNTIME.md  NEOX3_STATIC.md  neox3_python_api.md
cmake/: Dependencies.cmake
docs/src/: v3_app.jsx  v3_panels.jsx  v3_theme.jsx  v3_widgets.jsx
scripts/: class_hierarchy.py  dxs_remote.py  extract_protos_v2.py  find_python_api.py  ida_rpc.py  parse_detours.py  pe_deep.py  pe_recon.py  probe_camera_ready.py  verify_matrix.py  verify_protos.py
src/injector/: CMakeLists.txt  Injector.cpp
src/payload/: CMakeLists.txt  DllMain.cpp
src/payload/core/: Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  EventLog.cpp  EventLog.hpp  Keybinds.cpp  Keybinds.hpp  Localization.cpp  Localization.hpp  Logger.cpp  Logger.hpp  RemoteBridge.cpp  RemoteBridge.hpp
src/payload/core/procedure/: Loom.cpp  Loom.hpp  Pin.cpp  Pin.hpp  Procedure.hpp  ProfileManager.cpp  ProfileManager.hpp  Tick.cpp  Tick.hpp
src/payload/core/procedure/procedures/: AntiAFK.cpp  AntiAFK.hpp  AutoDecode.cpp  AutoDecode.hpp  AutoRescue.cpp  AutoRescue.hpp  EspVisual.cpp  EspVisual.hpp  HookCountdown.cpp  HookCountdown.hpp  SpeedOverride.cpp  SpeedOverride.hpp
src/payload/game/: CameraSampler.cpp  CameraSampler.hpp  GameMemory.cpp  GameMemory.hpp  NeoX3.hpp
src/payload/hook/: HookManager.cpp  HookManager.hpp  InputGuard.cpp  InputGuard.hpp  WndProcHook.cpp  WndProcHook.hpp
src/payload/render/: Dx11Backend.cpp  Dx11Backend.hpp  IRenderBackend.hpp
src/payload/scripting/: PythonBridge.cpp  PythonBridge.hpp
src/payload/ui/: Overlay.cpp  Overlay.hpp  PythonPanel.cpp  PythonPanel.hpp
src/payload/ui/framework/: Animation.hpp  ClickGui.cpp  ClickGui.hpp  CommandPalette.cpp  CommandPalette.hpp  Fonts.cpp  Fonts.hpp  IPanel.hpp  Icons.hpp  MdiIcons.hpp  Notifications.cpp  Notifications.hpp  Splash.cpp  Splash.hpp  TabbedPanel.cpp  TabbedPanel.hpp  Theme.cpp  Theme.hpp  View3D.cpp  View3D.hpp
src/payload/ui/hud/: HudManager.cpp  HudManager.hpp  IHudWidget.hpp
src/payload/ui/hud/widgets/: CrosshairWidget.cpp  CrosshairWidget.hpp  EspWidget.cpp  EspWidget.hpp  RadarWidget.cpp  RadarWidget.hpp  StatsWidget.cpp  StatsWidget.hpp
src/payload/ui/panels/: AcObservatoryPanel.cpp  AcObservatoryPanel.hpp  EntitiesPanel.cpp  EntitiesPanel.hpp  HooksPanel.cpp  HooksPanel.hpp  HudPanel.cpp  HudPanel.hpp  InteractionFatherPanel.cpp  InteractionFatherPanel.hpp  MatrixPanel.cpp  MatrixPanel.hpp  MemoryPanel.cpp  MemoryPanel.hpp  ModulesPanel.cpp  ModulesPanel.hpp  OverviewPanel.cpp  OverviewPanel.hpp  ProfilesPanel.cpp  ProfilesPanel.hpp  PythonReplPanel.cpp  PythonReplPanel.hpp  QuickActionsPanel.cpp  QuickActionsPanel.hpp  RaycastPanel.cpp  RaycastPanel.hpp  RpcTracerPanel.cpp  RpcTracerPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp  VelocityLabPanel.cpp  VelocityLabPanel.hpp  VulnLabPanel.cpp  VulnLabPanel.hpp
src/payload/utils/: JsonLite.hpp
src/preview/: CMakeLists.txt  main.cpp
